k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base64-sh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: base64-sh
  template:
    metadata:
      labels:
        app: base64-sh
    spec:
      containers:
        - image: rjshrjndrn/base64-sh:latest
          name: base64-sh
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: base64-sh
  labels:
    app: base64-sh
spec:
  ports:
    - name: "base64-sh"
      port: 80
  selector:
    app: base64-sh
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: base64-sh-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: base64-sh
spec:
  rules:
    - host: base64.sh
      http:
        paths:
          - path: /
            backend:
              serviceName: base64-sh
              servicePort: 80
  tls:
  - hosts:
    - base64.sh
    secretName: base64-sh-ssl
